# SocialnaSiet

./: .env.example  .gitignore  Cargo.toml  create_user.sh  devbox.json  run.sh  temp.json
docs/: Images.md  endpoints.md  stream.md
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20220101_000002_create_topics.rs  m20220101_000003_create_chat.rs  m20220101_000004_create_posts.rs  main.rs
src/: image.rs  main.rs
src/api/: auth.rs  chat.rs  mod.rs  posts.rs  topics.rs  users.rs
src/db/: chat.rs  mod.rs  posts.rs  topics.rs  users.rs
src/entities/: chat.rs  mod.rs  posts.rs  prelude.rs  topics.rs  users.rs
tests/: append_message.hurl  check_username.py  create_post.hurl  create_topic.hurl  create_topic.py  create_user.py  get_all_topics.hurl  get_ignored_string.hurl  get_messages.hurl  get_posts.hurl  login.hurl
