[package]
name = "SocialnaSiet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-auth = "0.8.1"
tokio = { version = "1", features = [
  "full",
  "rt-multi-thread",
  "macros",
  "net",
] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio",
  "macros",
] }
argon2 = "0.5.3"
dotenvy = "0.15.7"
futures-util = "0.3.32"
base64 = "0.22.1"
uuid = { version = "1.23.0", features = ["v4"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.44"
dashmap = "7.0.0-rc2"
